sponsor section done

--- a/index.html
+++ b/index.html
@@ -40,13 +40,35 @@
                     Influencer</h1>
                 <p class="banner-desc"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed
                     scelerisque eros. Lectus faucibus.</p>
-                <button>Preebook now</button>
+                <button>Preebook now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="banner-right">
                 <img src="images/main-camera.png" alt="">
             </div>
         </div>
     </header>
+
+
+
+    <main>
+        <section class="sponsor-sec">
+            <div class="sponsor">
+                <div><img src="images/logos/Alibaba.svg" alt="" srcset=""></div>
+                <div><img src="images/logos/Amazon.svg" alt="">
+                </div>
+                <div><img src="images/logos/Daraz.pk Logo.svg" alt=""></div>
+                <div><img src="images/logos/Ebay.svg" alt=""></div>
+                <div><img src="images/logos/Target.svg" alt=""></div>
+                <div> <img src="images/logos/Walmart.svg" alt=""></div>
+
+
+
+
+
+
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
