popular collection responsive done

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- font awsm -->
+
+    <!-- stylesheet css -->
 
     <link rel="stylesheet" href="style.css">
+    <!-- font awsm -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -33,12 +36,13 @@
 
             </div>
         </nav>
+        <!-- banner section strat -->
 
-        <div class="banner">
+        <div class="banner responsive">
             <div class="banner-left">
-                <h1 class="banner-title">Start your Journey as <br>
+                <h1 class="title">Start your Journey as <br>
                     Influencer</h1>
-                <p class="banner-desc"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed
+                <p class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed
                     scelerisque eros. Lectus faucibus.</p>
                 <button>Preebook now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
@@ -46,11 +50,16 @@
                 <img src="images/main-camera.png" alt="">
             </div>
         </div>
+
+        <!-- banner section end -->
     </header>
 
 
 
     <main>
+
+        <!-- sponsor section strat -->
+
         <section class="sponsor-sec">
             <div class="sponsor">
                 <div><img src="images/logos/Alibaba.svg" alt="" srcset=""></div>
@@ -62,12 +71,192 @@
                 <div> <img src="images/logos/Walmart.svg" alt=""></div>
 
 
+            </div>
+        </section>
+
+
+        <!-- sponsor section end -->
+
+        <!-- Popular Collection strat -->
+
+
+        <section class="popular-collection-sec">
+
+            <div class="section-title">
+                Popular Collection
+            </div>
+
+            <div class="collection-container">
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <div class="card-title">Flex Tripod</div>
+                    <div class="card-price">$50.48</div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <div class="card-description">Wordwide shifting available
+                        Buyers protection possible!</div>
+                </div>
+
+
+                <div class="card">
+                    <img src="images/mic.png" alt="">
+                    <div class="card-title">Flex Tripod</div>
+                    <div class="card-price">$50.48</div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <div class="card-description">Wordwide shifting available
+                        Buyers protection possible!</div>
+                </div>
+
+
+
+                <div class="card">
+                    <img src="images/airpod.png" alt="">
+                    <div class="card-title">Flex Tripod</div>
+                    <div class="card-price">$50.48</div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <div class="card-description">Wordwide shifting available
+                        Buyers protection possible!</div>
+                </div>
+
+                <div class="card">
+                    <img src="images/drone.png" alt="">
+                    <div class="card-title">Flex Tripod</div>
+                    <div class="card-price">$50.48</div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <div class="card-description">Wordwide shifting available
+                        Buyers protection possible!</div>
+                </div>
+
+
+                <div class="card">
+                    <img src="images/lights.png" alt="">
+                    <div class="card-title">Flex Tripod</div>
+                    <div class="card-price">$50.48</div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <div class="card-description">Wordwide shifting available
+                        Buyers protection possible!</div>
+                </div>
+
+
+                <div class="card">
+                    <img src="images/setup.png" alt="">
+                    <div class="card-title">Flex Tripod</div>
+                    <div class="card-price">$50.48</div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <div class="card-description">Wordwide shifting available
+                        Buyers protection possible!</div>
+                </div>
+
+
+                <div class="card">
+                    <img src="images/action.png" alt="">
+                    <div class="card-title">Flex Tripod</div>
+                    <div class="card-price">$50.48</div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <div class="card-description">Wordwide shifting available
+                        Buyers protection possible!</div>
+                </div>
+                <div class="card">
+                    <img src="images/single-light.png" alt="">
+                    <div class="card-title">Flex Tripod</div>
+                    <div class="card-price">$50.48</div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <div class="card-description">Wordwide shifting available
+                        Buyers protection possible!</div>
+                </div>
+                <div class="card">
+                    <img src="images/camera.png" alt="">
+                    <div class="card-title">Flex Tripod</div>
+                    <div class="card-price">$50.48</div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <div class="card-description">Wordwide shifting available
+                        Buyers protection possible!</div>
+                </div>
+
+
+
+
+
 
 
 
 
             </div>
+<div class="see-more-btn">
+    <a href="">See More <i class="fa-solid fa-arrow-right"></i></a>
+    
+</div>
+
+
         </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- Popular Collection end -->
     </main>
 </body>
 
