full responsive done

--- a/index.html
+++ b/index.html
@@ -235,29 +235,59 @@
 
 
             </div>
-<div class="see-more-btn">
-    <a href="">See More <i class="fa-solid fa-arrow-right"></i></a>
-    
-</div>
+            <div class="see-more-btn">
+                <a href="">See More <i class="fa-solid fa-arrow-right"></i></a>
+
+            </div>
 
 
         </section>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
         <!-- Popular Collection end -->
+
+
+        <!-- feature-section strat -->
+
+
+<section class="feature-section">
+<div class="feature-section-left">
+<img src="images/gear.png" alt="" srcset="">
+</div>
+
+<div class="feature-section-right">
+<div class="feature-section-title">
+    Featured products at one place
+</div>
+<div class="description">
+    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+</div>
+<button>Join Now    <i class="fa-solid fa-arrow-right"></i></button>
+</div>
+
+</section>
+
+
+   <!-- feature-section end -->
+
     </main>
+
+<footer>
+    <div class="footer-title">
+        Influencer products
+    </div>
+    <div class="footer-description">
+        Copyright © 2020  influencer products <br> All rights reserved
+    </div>
+    <div class="footer-icon">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-dribbble"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+    </div>
+</footer>
+
 </body>
 
 </html>
